--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 		</div>
 		<div class="container__message hidden"></div>
 	</section>
+	<div class="backdrop">
+		<p class="backdrop__message" data-id="backdrop"></p>
+	</div>
 	<div class="notifier"></div>
 	<script src="./Scripts/main.js"></script>
 </body>
